# Musync

./: CMakeLists.txt  Colors.qml  Main.qml  Volume.qml  barra_inferior.qml  main.cpp
moduls/: Barra_tiempo.qml  Colors.qml  Lista_canciones.qml  Volume.qml
src/: Main.qml  main.cpp
